
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 FEB 15a
  * in model/chem/_C2H4_Air_Plasma_36s/
    - rearranged the files significantly so that the combustion model is not
      separated from the plasma model anymore; all the reactions are now rather stored in
      one file: adamovich2023d.c
    - fixed a bug related to the Lindeman reactions which were not implemented correctly in
      the 4th version of the Adamovich model 
  

2023 FEB 14b
  * in bin
    - fixed several wrp files so that the Faces() call is replaced by Plane() calls
    

2023 FEB 14a
  * in src/bdry.c
    - in read_bdry_actions(), got rid of the action Faces() which should be replaced in the 
      control files by the Plane() commands
      

2023 FEB 13a
  * in cycle/tsemf/_AF/tsemf.c
    - in update_dUstar_emfield_IMAF(), added a is_node_bdry() before
      calling find_bdry_direc()
  * in model/emfield/_Epotential/emfield.c
    - in find_linearization_coefficients_bdry_node_emfield(), added 
      assert(is_node_bdry(np[lA],TYPELEVEL_EMFIELD))
  * in src/bdry.c
    - in read_bdry_actions(), in calling Faces(), zone should be set first to zone=gl->domain_lim
      instead of zone=gl->domain_all
      

2023 FEB 12a
  * in model/metrics/_generic/metrics.c
    - in find_unit_vector_normal_to_boundary_plane(), now uses is_node_bdry_with_single_direc()
      to determine valid nearby bdry nodes instead of probing for bdry nodes with the same
      bdry node type as given by _node_type(np[lA], TYPELEVEL)
  * in src/bdry.c
    - added is_node_bdry_with_single_direc()
    - in is_multiple_bdry_direc() and in find_bdry_direc(), added 
      assert(is_node_bdry(np[l_A],TYPELEVEL));
  

2023 FEB 10a
  * in src/bdry.c